--- a/Workshop2/client/create-course.html
+++ b/Workshop2/client/create-course.html
@@ -2,19 +2,30 @@
 
 <input id="name" placeholder="Course name">
 <input id="credits" type="number" placeholder="Credits">
+
+<br><br>
+
 <button onclick="createCourse()">Create</button>
+<button onclick="viewCourses()">View Courses</button>
 
 <script>
-async function createCourse() {
-  await fetch("http://localhost:3000/courses", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      name: document.getElementById("name").value,
-      credits: Number(document.getElementById("credits").value)
-    })
-  });
+  async function createCourse() {
+    await fetch("http://localhost:3000/courses", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        name: document.getElementById("name").value,
+        credits: Number(document.getElementById("credits").value)
+      })
+    });
 
-  alert("Course created");
-}
+    alert("Course created");
+
+    document.getElementById("name").value = "";
+    document.getElementById("credits").value = "";
+  }
+
+  function viewCourses() {
+    window.location.href = "list-courses.html";
+  }
 </script>
